--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav m-auto justify-content-center">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">WORK</span> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
@@ -80,7 +80,7 @@
         <a href="https://www.twitter.com/anirudh_nagraj" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.instagram.com/anirudh.nagraj" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/anirudh-nagraj/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-		<a href="https://medium.com/@nagarajan.anirudh" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
+		<a href="https://medium.com/@nagarajan.anirudh"  class="medium"><i class="bx bxl-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -90,16 +90,16 @@
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
-          <h1 class="uppermargin project-title"><b>My Work</b></h1>
-          <h5 class="bottompadding">The projects below represent the work done in the space of accessibility, HCI and UX research, UX research for the web for various teams within the university.</h5>
+          <h1 class="uppermargin project-title"><b>Projects</b></h1>
+          <h5 class="bottompadding">My work is spread across applying User Research in the field of accessibility to create accessible products, and general User Research to design better websites for various divisons of the University.</h5>
         </div>
 
 
 
-          <div class="container color-y portfolio-item filter-app uppermargin3">
+          <div class="container color-y portfolio-item filter-app">
             <div class="row bottompadding">
               <div class="col-md-6 countermargin">
-                <h1 style="color:#004687"><strong>THE TRIDENT</strong></h1>
+                <h1 style="color:#004687" class=" uppermargin"><strong>THE TRIDENT</strong></h1>
                 <div>
 
                   <p class="paragraph2 justified uppermargin">
@@ -113,8 +113,7 @@
                   <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button>
                 </div>
               </div>
-              <div class="col-md-4 countermargin uppermargin">
-                <img src="assets/img/Personal/Discussion 2.jpg" class="avatar3" alt="">
+              <div class="col-md-4 avatar15">
             </div>
              </div>
           </div>
