--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
           <div class="container color-y portfolio-item filter-app">
-            <div class="row bottompadding">
+            <div class="row">
               <div class="col-md-6 countermargin">
                 <h1 style="color:#004687" class=" uppermargin"><strong>THE TRIDENT</strong></h1>
                 <div>
@@ -110,7 +110,7 @@
                   <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Literature Reviews, Interviews, Affinity Map, Scenario Development, Competitive Analysis, Personas, BodyStorming.</b>
                   </p>
 
-                  <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button>
+                  <button class="custom-btn btn-1 bottompadding" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button>
                 </div>
               </div>
               <div class="col-md-4 avatar15">
