--- a/index.html
+++ b/index.html
@@ -97,15 +97,16 @@
 
 
           <div class="container color-y portfolio-item filter-app">
-            <div class="row">
-              <div class="col-md-6 countermargin bottompadding">
+              <div class="countermargin bottompadding">
                 <h1 style="color:#004687" class=" uppermargin"><strong>THE TRIDENT</strong></h1>
                 <div>
 
                   <p class="paragraph2 justified uppermargin">
                     An industry funded study to assess the manner in which blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run. Focus on HCI Research and User Centered Design.
                   </p>
-                  </p>
+
+
+                  <div class="avatar15">
 
                   <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Literature Reviews, Interviews, Affinity Map, Scenario Development, Competitive Analysis, Personas, BodyStorming.</b>
                   </p>
@@ -113,7 +114,6 @@
                   <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button>
                 </div>
               </div>
-              <div class="col-md-4 avatar15">
             </div>
              </div>
           </div>
