--- a/index.html
+++ b/index.html
@@ -97,16 +97,15 @@
 
 
           <div class="container color-y portfolio-item filter-app">
-              <div class="countermargin bottompadding">
+            <div class="row bottompadding">
+              <div class="col-md-6 countermargin">
                 <h1 style="color:#004687" class=" uppermargin"><strong>THE TRIDENT</strong></h1>
                 <div>
 
                   <p class="paragraph2 justified uppermargin">
                     An industry funded study to assess the manner in which blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run. Focus on HCI Research and User Centered Design.
                   </p>
-
-
-                  <div class="avatar15">
+                  </p>
 
                   <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Literature Reviews, Interviews, Affinity Map, Scenario Development, Competitive Analysis, Personas, BodyStorming.</b>
                   </p>
@@ -114,6 +113,8 @@
                   <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button>
                 </div>
               </div>
+              <div class="col-md-4 countermargin uppermargin">
+                <img src="assets/img/Personal/rolestorming.jpg" class="img-fluid" alt="">
             </div>
              </div>
           </div>
