--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="container color-y portfolio-item filter-card uppermargin">
             <div class="row bottompadding">
               <div class="col-md-6 countermargin ">
-                <h1 style="color:#004687"><strong>COEIT RESEARCH REDESIGN</strong></h1>
+                <h1 style="color:#004687"><strong>COEIT RESEARCH WEBSITE REDESIGN</strong></h1>
                 <div>
 
                   <p class="paragraph2 justified uppermargin">A semester project to provide recommendations for the College of Engineering and Information Technology (COEIT) research website through extensive user research. This website is visited by faculty, students, and researchers alike.
@@ -178,7 +178,7 @@
                 <h1 style="color:#004687"><strong>B-AID : THE NAV APP FOR THE BLIND</strong></h1>
                 <div>
 
-                  <p class="paragraph2 justified uppermargin">Globally, millions of people suffer from vision related issues. Passionate as I am for accessibility, the project revolves around creating a mobile application prototype for individuals who are visually impaired relating to their navigation.
+                  <p class="paragraph2 justified uppermargin">Globally, millions of people suffer from vision related issues. Challenges are faced while navigating from one place to another. This project revolves around creating a mobile application prototype to aid for individuals who are visually impaired in their navigation.
                   </p>
 
                   <p class="text-aria2 uppermargin"><b> 🕵️ Research Methods: Context Interviews, Field Studies, Storyboards, Affinity Map, Empathy map, Personas, Rapid Prototyping. </b>
