--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -336,7 +336,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 
 		<div class="container">
-			<h3 class="uppermargin" align="center"><Strong>SCENARIO, STORYBOARD AND AFFINITY MAP</Strong></h3>
+			<h3 class="uppermargin" align="center"><Strong>BODYSTORMING, STORYBOARD AND AFFINITY MAP</Strong></h3>
 			<p>
 				To populate the insights and draw major themes arising from the research and the profiling, we decided to create an affinity map. This exercise allowed us to directly focus on the key aspects of the research and what users want, giving the prototype building a direction to focus on. Parallely, the team also conducted bodystorming, and created storyboards to understand the situational aspects of the device in terms of the feasibility, and working.
 			</p>
