--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
               </div>
               <div class="col-md-4 countermargin uppermargin">
-                <img src="assets/img/Personal/rolestorming.jpg" class="img-fluid" alt="">
+                <img src="assets/img/Personal/prototype_new.png" class="avatar7" alt="">
             </div>
              </div>
           </div>
@@ -187,8 +187,8 @@
                   <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> READ MORE </a></button>
                 </div>
               </div>
-              <div class="col-md-4 countermargin">
-                <img src="assets/img/Personal/Storyboard1.jpg" class="avatar7 uppermargin" alt="">
+              <div class="col-md-4 countermargin uppermargin">
+                <img src="assets/img/Personal/baid.png" class="avatar7 uppermargin" alt="">
             </div>
              </div>
           </div>
