New Changes to home page

--- a/index.html
+++ b/index.html
@@ -63,136 +63,78 @@
 
   <section id="hero" class="d-flex flex-column justify-content-center">
 
-    <div class="container uppermargin" data-aos="zoom-in" data-aos-delay="100">
-      <div class="row">
-        <div class="col-md-8">
-          <h2><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
-          <h3 class="textbackground2"><b>Welcome to my portfolio!</b></h3>
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-          <p>I'm an UX Researcher with a love for accessiblity. </p>
-          <p>I help build better products, bringing customers and businesses closer to one another.</p>
-        </div>
-        <div class="col-md-3">
-          <img src="assets/img/Personal/Ani_New.jpg" class="img-fluid" style="border-radius:100%"  alt="">
-        </div>
-      </div>
-      <div class="social-links">
-        <a href="https://www.twitter.com/anirudh_nagraj" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.instagram.com/anirudh.nagraj" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/anirudh-nagraj/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-		<a href="https://medium.com/@nagarajan.anirudh"  class="medium"><i class="bx bxl-medium"></i></a>
-      </div>
+          <h2 align="center"><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
+          <h3 class="textbackground2" align="center"><b>Welcome to my portfolio!</b></h3>
+
+            <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="">
+
+      <p class="paragraph3" align="center">As a UX Researcher, I come with an engineering background and a passion for interaction, I employ various research methods to help create more accessible products, bringing customers and businesses closer to one another. </p>
+
+      <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > View Projects </a></button> </div>
+    </div>
     </div>
   </section><!-- End Hero -->
 
   <main id="main">
 
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
+<section class="containerblue" id="portfolio">
+  <div class="container grid default-grid">
+        <div class="row row-xs-sm sample-row">
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong>THE Trident - Obstacle detection device for visually impaired runners</strong></h1></div>
+      <p class="paragraph2 justified uppermargin">
+        An industry-funded study to assess how blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them in obstacle detection while on the run. Focus on HCI Research and User-Centered Design.
+      </p>
 
-          <h1 class="uppermargin project-title"><b>Projects</b></h1>
-          <h5 class="bottompadding">My work is spread across applying User Research in the field of accessibility to create accessible products, and general User Research to design better websites for various divisons of the University.</h5>
-        </div>
+    <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button></div>
 
-
-
-          <div class="container color-y portfolio-item filter-app">
-            <div class="row bottompadding">
-              <div class="col-md-6 countermargin">
-                <h1 style="color:#004687" class=" uppermargin"><strong>THE TRIDENT</strong></h1>
-                <div>
-
-                  <p class="paragraph2 justified uppermargin">
-                    An industry funded study to assess the manner in which blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run. Focus on HCI Research and User Centered Design.
-                  </p>
-                  </p>
-
-                  <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Literature Reviews, Interviews, Affinity Map, Scenario Development, Competitive Analysis, Personas, BodyStorming.</b>
-                  </p>
-
-                  <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button>
-                </div>
-              </div>
-              <div class="col-md-4 countermargin uppermargin">
-                <img src="assets/img/Personal/prototype_new.png" class="avatar7" alt="">
-            </div>
-             </div>
-          </div>
-
-          <div class="uppermargin3">
-          </div>
-
-
-                    <div class="container color-y portfolio-item filter-card uppermargin">
-                      <div class="row bottompadding">
-                        <div class="col-md-6 countermargin">
-                          <h1 style="color:#004687"><strong>SHARED SERVICES CENTER WEBSITE REDESIGN</strong></h1>
-                          <div>
-
-                            <p class="paragraph2 justified uppermargin">The Shared Services Center Team found it difficult to attract users to their website. This is a project to redesing the existing website using user research and front end web development.
-                            </p>
-
-                            <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Interviews, NPS Score, Statistical Analysis, Heuristic Evaluations</b>
-                            </p>
-
-                            <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
-                          </div>
-                        </div>
-                        <div class="col-md-4 countermargin uppermargin">
-                          <img src="assets/img/Personal/HA.png" class="img-fluid uppermargin" alt="">
-                      </div>
-                       </div>
-                    </div>
-
-          <div class="uppermargin3">
-          </div>
-
-          <div class="container color-y portfolio-item filter-card uppermargin">
-            <div class="row bottompadding">
-              <div class="col-md-6 countermargin ">
-                <h1 style="color:#004687"><strong>COEIT RESEARCH WEBSITE REDESIGN</strong></h1>
-                <div>
-
-                  <p class="paragraph2 justified uppermargin">A semester project to provide recommendations for the College of Engineering and Information Technology (COEIT) research website through extensive user research. This website is visited by faculty, students, and researchers alike.
-                  </p>
-
-                  <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Context Interviews, Contextual Inquiries, Competitive Analysis, Heuristic Evaluations, Rapid Prototyping.</b>
-                  </p>
-
-                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> READ MORE </a></button>
-                </div>
-              </div>
-              <div class="col-md-4 countermargin uppermargin">
-                <img src="assets/img/Personal/CR.png" class="img-fluid uppermargin" alt="">
-            </div>
-             </div>
-          </div>
-
-          <div class="uppermargin3">
-          </div>
-
-
-          <div class="container color-y portfolio-item filter-app uppermargin">
-            <div class="row bottompadding">
-              <div class="col-md-6 countermargin">
-                <h1 style="color:#004687"><strong>B-AID : THE NAV APP FOR THE BLIND</strong></h1>
-                <div>
-
-                  <p class="paragraph2 justified uppermargin">Globally, millions of people suffer from vision related issues. Challenges are faced while navigating from one place to another. This project revolves around creating a mobile application prototype to aid for individuals who are visually impaired in their navigation.
-                  </p>
-
-                  <p class="text-aria2 uppermargin"><b> 🕵️ Research Methods: Context Interviews, Field Studies, Storyboards, Affinity Map, Empathy map, Personas, Rapid Prototyping. </b>
-                  </p>
-
-                  <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> READ MORE </a></button>
-                </div>
-              </div>
-              <div class="col-md-4 countermargin uppermargin">
-                <img src="assets/img/Personal/baid.png" class="avatar7 uppermargin" alt="">
-            </div>
-             </div>
-          </div>
+      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/prototype_color.png" class="img-fluid uppermargin3" alt=""></div></div>
+      </div>
 </section>
+
+<section class="uppermargin3">
+  <div class="container grid default-grid">
+        <div class="row row-xs-sm sample-row">
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>Shared Services Center Website Redesign</strong></h1></div>
+      <p class="paragraph2 justified uppermargin">
+        The Shared Services Center Team found it difficult to attract users to their website. Hence, I redesigned the existing website from the insights and pain points uncovered from UX Research, integrating front-end web development.
+      </p>
+
+    <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
+  </div>
+      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/HA.png" class="avatar8 uppermargin3" alt=""></div></div>
+      </div>
+</section>
+
+<section class="containerblue">
+  <div class="container grid default-grid">
+        <div class="row row-xs-sm sample-row">
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong>COEIT Research Website Redesign</strong></h1></div>
+      <p class="paragraph2 justified uppermargin">
+        The goal of this project was to provide recommendations for the College of Engineering and Information Technology (COEIT) research website.  The website suffered from a lot of content-related issues and proved to be unusable by the users.
+      </p>
+
+  <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> READ MORE </a></button>
+</div>
+      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/CR.png" class="avatar8 uppermargin3" alt=""></div></div>
+      </div>
+</section>
+
+<section class="uppermargin3">
+  <div class="container grid default-grid">
+        <div class="row row-xs-sm sample-row">
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>B-AID : The Navigational Voice Application for people who are blind</strong></h1></div>
+      <p class="paragraph2 justified uppermargin">
+        Globally, millions of people suffer from vision-related issues. Challenges are faced while navigating from one place to another. This project revolves around creating a mobile application prototype to aid visually impaired individuals in their navigation.
+      </p>
+
+    <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> READ MORE </a></button>
+  </div>
+      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/baid.png" class="avatar9 uppermargin3" alt=""></div></div>
+      </div>
+</section>
+
 
 </main><!-- End #main -->
 
@@ -200,6 +142,14 @@
 <footer id="footer">
   <div class="container">
     <div class="copyright">
+
+        <p>Soccer, Travel, or just chill, let's chat!</p>
+      <div class="social-links">
+        <a href="https://www.twitter.com/anirudh_nagraj" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.instagram.com/anirudh.nagraj" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/anirudh-nagraj/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+		      <a href="https://medium.com/@nagarajan.anirudh"  class="medium"><i class="bx bxl-medium"></i></a>
+      </div>
       <strong><span>Built with a lot of thought and passion by Anirudh</span></strong>.
     </div>
   </div>
