Grammar changes to navigational aid

--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -99,22 +99,38 @@
 			<p class="justified">
 				<h3><b>What's this about?</b></h3>
 				<p class=" justified paragraph">
-					<b class="textbackground3"> An industry funded study to assess the manner in which blind users interact with technology while running. </b>  The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run.
+					<b class="textbackground3">An industry-funded study to assess how blind users interact with technology while running. </b>  The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run.
 
 				</p>
 			</p>
 
 			<h3 class ="uppermargin"><strong>My Role in this longitudinal study</strong></h3>
-			<p class="justified paragraph">  This project was done in collaboration with <b class="textbackground3">TOYOTA.</b> This was a two year project. It included an overall team of 5 people, cutting across diversities, comprising of Designers, HCI Researchers, and a Faculty as the chief investigator. <b class="textbackground3">As the lead user researcher</b>, I successfully helped build the prototype to aid blind runners leading the student team in research related activities.</p>
+			<p class="justified paragraph">
+				Done in collaboration with <b class="textbackground3"> TOYOTA </b>,  this was a two-year project. It included an overall team of 5 people, cutting across diversities, including Designers, HCI Researchers, and a Faculty as the chief investigator.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the student team in research-related activities.</p>
 
 		<h3 class="uppermargin"><strong>Outcome of the project</strong></h3>
 		<p class="justified paragraph"> As a team, we prioritized user research and narrowed down on the type of device that can fit the users' needs.</p>
-		<p class="justified paragraph"> We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT - The TRIDENT. </b> </p>
+		<p class="justified paragraph"> We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT - The TRIDENT. </b>
+		We determined the features from interviews conducted with blind joggers and runners.</p>
 
 
 			<img src="assets/img/Personal/prototype_color.png" class="avatar9 uppermargin" alt="">
 
-		<p class="justified paragraph"><b>TRIDENT</b> stands for Tri-Positional Detection and Navigational Technology. The key features of the system include enhanced awareness of surroundings, detection of obstacles above and below the waist, modes for long and short range detection and choice of output. These features have been determined from interviews conducted with blind joggers and runners. </p></p>
+		<p class="justified paragraph"><b class="textbackground3"> TRIDENT </b> stands for Tri-Positional Detection and Navigational Technology. The system's key features include:
+			<ul class="paragraph">
+				<li>
+					Enhanced awareness of surroundings.
+				</li>
+				<li>
+					Detection of obstacles above and below the waist.
+				</li>
+				<li>
+						Modes for long and short-range detection.
+				</li>
+				<li>
+					Choice of output.
+				</li>
+			</ul> </p>
 
 
 
@@ -251,7 +267,7 @@
 	<div class="containerblue bottompadding">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
 		<p class="justified countermargin" style="color:#000">
-			We completed an <b>interview study of individuals</b> with visual impairments and their exercise tendencies and experiences. Through this interview we further explored the commonly used techniques for running as well as got feedback on the device idea we were trying to prototype. The blind and visually impaired individuals came with variety of running experience ranging from casual hobbits runners to marathon runners and everyone in between.
+			We completed an <b>interview study of individuals </b>with visual impairments and their exercise tendencies and experiences. Through this interview, we further explored the commonly used techniques for running and got feedback on the device idea we were trying to prototype. The blind and visually impaired individuals came with a variety of running experiences ranging from casual hobbits runners to marathon runners and everyone in between.
 		</p>
 		<div class="row">
 			<div class="col-md-3 offset-1 facts uppermargin" align="center">
@@ -338,7 +354,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 		<div class="container">
 			<h3 class="uppermargin" align="center"><Strong>BODYSTORMING, STORYBOARD AND AFFINITY MAP</Strong></h3>
 			<p>
-				To populate the insights and draw major themes arising from the research and the profiling, we decided to create an affinity map. This exercise allowed us to directly focus on the key aspects of the research and what users want, giving the prototype building a direction to focus on. Parallely, the team also conducted bodystorming, and created storyboards to understand the situational aspects of the device in terms of the feasibility, and working.
+				We decided to create an affinity map to populate the insights and draw significant themes from the research and the profiling. This exercise allowed us to focus on the critical aspects of the study and what users want, giving the prototype building a direction to focus. Parallelly, the team also conducted bodystorming and created storyboards to understand the situational aspects of the device in terms of feasibility and work.
 			</p>
 			<div class=" uppermargin bottompadding ">
 				<figure>
@@ -378,7 +394,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 				<section>
 					<h3 class="uppermargin project-title"><b>Phase #3 - Prototype Building</b></h3>
-						<p class="justified paragraph"> We were now at a stage where we could build the prototype. We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT. </b></p>
+						<p class="justified paragraph"> We were now at a stage where we could build the prototype. We chose three different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research, material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT. </b></p>
 							<div class ="row">
 								<div class="col-md-6">
 										<p class="justified paragraph">
