--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         </div>
       </li> -->
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
+        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">WORK</span></a>
       </li>
 	   <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">RESUME</span></a>
@@ -109,11 +109,11 @@
                   <p class="justified paragraph">Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time. My proudest moment while traveling came when I scaled a Himalayan peak, Kedarkantha. 12,500 ft feet above sea level.  </p>
               </div>
               <div class="col-md-4 offset-1">
-                <img src="assets/img/Personal/Main Image 3.png" class="img-fluid" alt="">
+                <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="">
               </div>
             </div>
             <h3 class="uppermargin" align="center"><strong>Want to get in touch? Let's chat!</strong></h3>
-            <div class="social-links">
+            <div class="social-links" align="center">
               <a href="https://www.twitter.com/anirudh_nagraj" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="https://www.instagram.com/anirudh.nagraj" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/in/anirudh-nagraj/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
