--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
           <h2 align="center"><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
-          <h3 class="textbackground2" align="center"><b>Welcome to my portfolio!</b></h3>
+          <h3 style="color:#fff" align="center"><b>Welcome to my portfolio!</b></h3>
 
             <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="">
 
-      <p class="paragraph3" align="center">As a UX Researcher, I come with an engineering background and a passion for interaction, I employ various research methods to help create more accessible products, bringing customers and businesses closer to one another. </p>
+      <p class="paragraph3" align="center">As a <b class="textbackground2"> UX Researcher </b>, I come with an engineering background and a passion for interaction. I employ various research methods to help create <b class="textbackground2">accessible products</b>, thereby bringing customers and businesses closer to one another. </p>
 
       <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > View Projects </a></button> </div>
     </div>
