--- a/mobileapp.html
+++ b/mobileapp.html
@@ -58,7 +58,7 @@
 				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
+				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">WORK</span></a>
 			</li>
 			<!--<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="navcolor">
