--- a/mobileapp.html
+++ b/mobileapp.html
@@ -149,7 +149,7 @@
 	<p class="justified paragraph">I created Empathy maps and Personas to understand my users pain points with respect to a navigational application and it's constraints. For ideation, I created a mini Affinity Map and chalked out story boards to give me a view of how things may work in a real world scenario. All these techniques made come up with an application that may encapsulates things that users would like to see in a navigational application. For this project, I decided to employ the standard design thinking process.</p>
 </p>
 
-<img src="assets/img/Personal/Process.png" class="avatar4" alt="">
+<img src="assets/img/Personal/Process.png" class="avatar9 uppermargin" alt="">
 </div>
 
 
@@ -379,12 +379,12 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 			<h3 class="uppermargin portfolio-title"><b>Prototype</b></h3>
 
 				<p class="justified">
-					<span class = "paragraph"> Starting with the <b class="textbackground3"> Pen and Paper Sketches </b>  for low fidelity,  <b class="textbackground3"> Balsamiq Mockups </b>  for medium fidelity, and  <b class="textbackground3"> Adobe XD </b></span> for high fidelity mockups, I went in stages.</p>
+					<span class = "paragraph"> Starting with the <b class="textbackground3"> Pen and Paper Sketches </b>  for low fidelity,  <b class="textbackground3"> Balsamiq Mockups </b>  for medium fidelity, and  <b class="textbackground3"> Adobe XD </b>for high fidelity mockups, I went in stages.</p>
 
 
 					<h4><b>Low Fidelity Mockups</b></h4>
 					<p class="justified paragraph"> I love to put my thoughts on paper so I decided to go ahead with the pen-paper route. Anything that comes to my mind has to hit the white sheet first. </p>
-						<img src="assets/img/Personal/PPSketch.png" class="avatar4" alt="">
+						<img src="assets/img/Personal/PPSketch.png" class="avatar9" alt="">
 
 
 						<h4 class="uppermargin"><b>Medium Fidelity Mockups</b></h4>
@@ -393,7 +393,7 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 							<h6 class="textbackground3"><b>Main Screen</b></h6>
 							<div class="row">
 								<div class ="col-md-4">
-									<img src="assets/img/Personal/MainScreen.png" class="avatar4" alt="">
+									<img src="assets/img/Personal/MainScreen.png" class="avatar9" alt="">
 								</div>
 								<div class ="col-md-8">
 									<p class="justified  uppermargin">This is the main page and is a key component in the application. It has 3 pivotal functions </p> <h5> <span class ="text-aria irqhighlight"> Ask for Assistance </span>, <span class="text-aria irqhighlight"> Connect to Maps </span> , <span class =" text-aria irqhighlight"> Video Assistance</span> </span></h5>
@@ -407,7 +407,7 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 
 								<h4 class="uppermargin"><b>Prototype</b></h4>
 								<p class="justified paragraph"> <b class="paragraph"> Adobe XD </b> was the tool used and I also used <b class="textbackground3">voice feature </b> given by the tool to do the same.</span> </p>
-									<img src="assets/img/Personal/MockupFinal.png" class="avatar4" alt=""> To take a look at the prototype, click <a href="https://xd.adobe.com/view/003e47c3-2a70-47ce-a40c-7989f1c48a88-556d/"> Here </a> </p>
+									<img src="assets/img/Personal/MockupFinal.png" class="avatar9" alt=""> To take a look at the prototype, click <a href="https://xd.adobe.com/view/003e47c3-2a70-47ce-a40c-7989f1c48a88-556d/"> Here </a> </p>
 
 								</div>
 </div>
