--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <p class="paragraph3">As a <b class="textbackground2"> UX Researcher </b>, I come with an engineering background and a passion for interaction. I employ various research methods to help create <b class="textbackground2">accessible products</b>, thereby bringing customers and businesses closer to one another. </p>
 
-      <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > View Projects </a></button> </div>
+      <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div>
     </div>
     </div>
   </section><!-- End Hero -->
